--- a/iac/prometheus-ring/ansible/playbook.yaml
+++ b/iac/prometheus-ring/ansible/playbook.yaml
@@ -35,3 +35,10 @@
 - hosts: workers
   roles:
     - swarm_join_worker
+
+- hosts: all
+  become: true
+  vars:
+    node_exporter_version: 1.9.1
+  roles:
+    - install_node_exporter
